--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -44,7 +44,7 @@
               </li>
             </ul>
             <li class="nav-item"><a class="nav-link" href="{{ path('liste_ajax') }}">List Ajax</a></li>
-            <li class="nav-item"><a class="nav-link bg-info p-1 text-white ml-5 rounded" href="{{ path('app_logout') }}">Se Déconnecter</a></li>
+            <li class="nav-item"><a class="nav-link bg-info p-1 text-white ml-5 rounded " href="{{ path('app_logout') }}">Déconnexion <i class="fa fa-btn fa-sign-out"></i></a></li>
         </div>
 
         {% else %}
