--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -55,8 +55,8 @@ title %}Log in!{% endblock %} {% block body %}
               />
               <div class="form-group">
                 <div class="col-md-12">
-                  <button type="submit" class="btn btn-primary">
-                    <i class="fa fa-btn fa-sign-in"></i> Se connecter
+                  <button type="submit" class="btn btn-primary float-right">
+                    <i class="fa fa-btn fa-sign-in"></i> Connexion
                   </button>
                 </div>
               </div>
